Update JAppPacker